--- a/src/styles/baseRules/_reset.scss
+++ b/src/styles/baseRules/_reset.scss
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: "Poppins";
+  src: url("@assetsFont/poppins-regular.woff") format("woff"),
+    url("@assetsFont/poppins-regular.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -6,4 +14,5 @@
 
 html {
   font-size: 62.5%;
+  font-family: "Poppins", sans-serif;
 }
