--- a/src/styles/lib/_extends.scss
+++ b/src/styles/lib/_extends.scss
@@ -1,3 +1,9 @@
+%miniPLite {
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 21px;
+}
+
 %miniP {
   font-size: 1.4rem;
   font-weight: 700;
@@ -35,4 +41,12 @@
 
 %a {
   text-decoration: none;
+}
+
+%colorGradient {
+  background: linear-gradient(178.18deg, #fd749b -13.56%, #281ac8 158.3%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
 }
