--- a/src/styles/lib/_extends.scss
+++ b/src/styles/lib/_extends.scss
@@ -43,6 +43,10 @@
   text-decoration: none;
 }
 
+%gradient {
+  background: linear-gradient(178.18deg, #fd749b -13.56%, #281ac8 158.3%);
+}
+
 %colorGradient {
   background: linear-gradient(178.18deg, #fd749b -13.56%, #281ac8 158.3%);
   -webkit-background-clip: text;
