--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -45,9 +45,17 @@
       }
 
       .contentIcons {
-        @include flex(row, space-between, center, nowrap);
+        @include flex(row, flex-start, center, nowrap);
 
         @include measure(0, 0, 200px, auto);
+
+        & i {
+          @include measure(0, 0 25px 0 0, auto, auto);
+
+          font-size: 1.5rem;
+
+          color: $secondaryColor;
+        }
       }
     }
   }
